unpackaged/main/default/objects/EMEA_Salesforce_Form__c/EMEA_Salesforce_Form__c.object-meta.xml
<CustomObject>
    <label>EMEA Salesforce Form</label>
    <nameField>
        <displayFormat>ESF-{0000}</displayFormat>
        <label>EMEA Salesforce Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMEA Salesforce Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>