unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Company_No__c.field-meta.xml
<CustomField>
    <fullName>Company_No__c</fullName>
    <label>Company No</label>
    <length>8</length>
    <type>Text</type>
</CustomField>