unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Furniture_Margin__c.field-meta.xml
<CustomField>
    <fullName>Furniture_Margin__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Please enter the margin</inlineHelpText>
    <label>Furniture Margin</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>