unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Job_Classification__c.field-meta.xml
<CustomField>
    <fullName>Job_Classification__c</fullName>
    <inlineHelpText>Please select the Job Classification from the list</inlineHelpText>
    <label>Job Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Congress</fullName>
            </value>
            <value>
                <fullName>Consumer Event</fullName>
            </value>
            <value>
                <fullName>Corporate Event</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>