unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blitz|GES Connection</fullName>
                <isActive>false</isActive>
                <label>Blitz|GES Connection</label>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Colleague Referral</fullName>
                <isActive>false</isActive>
                <label>Colleague Referral</label>
            </value>
            <value>
                <fullName>Commissionable Venue Recommendation</fullName>
            </value>
            <value>
                <fullName>Contractors</fullName>
                <isActive>false</isActive>
                <label>Contractors</label>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Digital CTA</fullName>
            </value>
            <value>
                <fullName>Event/Tradeshow</fullName>
            </value>
            <value>
                <fullName>Eventit</fullName>
                <isActive>false</isActive>
                <label>Eventit</label>
            </value>
            <value>
                <fullName>Exhibitor List</fullName>
            </value>
            <value>
                <fullName>Expresso</fullName>
            </value>
            <value>
                <fullName>IMEX</fullName>
                <isActive>false</isActive>
                <label>IMEX</label>
            </value>
            <value>
                <fullName>Inbound - Call Center</fullName>
                <isActive>false</isActive>
                <label>Inbound - Call Center</label>
            </value>
            <value>
                <fullName>Inbound ServiCentre</fullName>
                <isActive>false</isActive>
                <label>Inbound ServiCentre</label>
            </value>
            <value>
                <fullName>Incoming Call</fullName>
            </value>
            <value>
                <fullName>Industry Event</fullName>
                <isActive>false</isActive>
                <label>Industry Event</label>
            </value>
            <value>
                <fullName>Lead Generation Team</fullName>
                <isActive>false</isActive>
                <label>Lead Generation Team</label>
            </value>
            <value>
                <fullName>LinkedIn Sales Navigato</fullName>
            </value>
            <value>
                <fullName>Marketing Sponsorship</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>N200 Web site enquiry</fullName>
                <isActive>false</isActive>
                <label>N200 Web site enquiry</label>
            </value>
            <value>
                <fullName>New Business Lead Gen</fullName>
                <isActive>false</isActive>
                <label>New Business Lead Gen</label>
            </value>
            <value>
                <fullName>Organiser Referral</fullName>
            </value>
            <value>
                <fullName>Outbound Marketing</fullName>
                <isActive>false</isActive>
                <label>Outbound Marketing</label>
            </value>
            <value>
                <fullName>Outbound Marketing (Sales</fullName>
            </value>
            <value>
                <fullName>Poken web site enquiry</fullName>
                <isActive>false</isActive>
                <label>Poken web site enquiry</label>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Self-Generated</fullName>
                <isActive>false</isActive>
                <label>Self-Generated</label>
            </value>
            <value>
                <fullName>Self-Generation (Sales)</fullName>
            </value>
            <value>
                <fullName>Show Walk</fullName>
                <isActive>false</isActive>
                <label>Show Walk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>