unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/New_Repeat__c.field-meta.xml
<CustomField>
    <fullName>New_Repeat__c</fullName>
    <inlineHelpText>Please select if this is repeat or new</inlineHelpText>
    <label>New / Repeat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Repeat Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>