unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency__c</fullName>
    <inlineHelpText>Please select the currency you want the Opportunity to use</inlineHelpText>
    <label>Opportunity Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>DOL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>