unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Organiser_Website__c.field-meta.xml
<CustomField>
    <fullName>Organiser_Website__c</fullName>
    <inlineHelpText>Please enter the Organiser website, this will be validated</inlineHelpText>
    <label>Organiser Website</label>
    <required>true</required>
    <type>Url</type>
</CustomField>