unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <inlineHelpText>Please enter the phone number</inlineHelpText>
    <label>Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>