unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Sales_Location__c.field-meta.xml
<CustomField>
    <fullName>Sales_Location__c</fullName>
    <inlineHelpText>Please select the Sales Location from the list</inlineHelpText>
    <label>Sales Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Coventry</fullName>
            </value>
            <value>
                <fullName>Elstree</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Holland</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Romania</fullName>
            </value>
            <value>
                <fullName>Sheffield</fullName>
            </value>
            <value>
                <fullName>UAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>