unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Show_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Close_Date__c</fullName>
    <inlineHelpText>Please enter the close date</inlineHelpText>
    <label>Show Close Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>