unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Show_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Full_Name__c</fullName>
    <inlineHelpText>Please enter the full Show Name e.g. Autumn Fair</inlineHelpText>
    <label>Show Full Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>