unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Show_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Start_Date__c</fullName>
    <inlineHelpText>Please enter the Show Open Date</inlineHelpText>
    <label>Show Start Date</label>
    <type>Date</type>
</CustomField>