unpackaged/main/default/objects/EMEA_Salesforce_Form__c/fields/Specialist_Lighting__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Lighting__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Please enter the sales price</inlineHelpText>
    <label>Specialist Lighting</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>