unpackaged/main/default/objects/EMEA_Salesforce_Form__c/validationRules/Organiser_address_is_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>Organiser_address_is_entered</fullName>
    <active>true</active>
    <errorConditionFormula>Organiser_Address__c == &quot;.&quot; ||
 Organiser_Address__c == &quot;TBC&quot; ||
 Organiser_Address__c == &quot;TBD&quot; || 
 Organiser_Address__c == &quot;tbc&quot; ||
 Organiser_Address__c == &quot;tbd&quot; ||
 Organiser_Address__c == &quot;Already Set Up&quot; ||
 Organiser_Address__c == &quot;already set up&quot; ||
 Organiser_Address__c == &quot;unknown&quot; ||
 Organiser_Address__c == &quot;Unknown&quot;</errorConditionFormula>
    <errorMessage>Please enter the Organiser Address. Data quality is important</errorMessage>
</ValidationRule>