unpackaged/main/default/objects/EMEA_Salesforce_Form__c/validationRules/Organiser_Show_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Organiser_Show_Address</fullName>
    <active>true</active>
    <errorConditionFormula>Show_website__c  = &quot;http://.&quot; ||
 Show_website__c  = &quot;N/A&quot; ||
 Show_website__c  = &quot;n/a&quot; ||
 Show_website__c  = &quot;TBC&quot; ||
 Show_website__c  = &quot;tbc&quot; ||
 Show_website__c  = &quot;TBD&quot; ||
 Show_website__c  = &quot;tbd&quot; ||
 Show_website__c == &quot;Already Set Up&quot; ||
 Show_website__c == &quot;already set up&quot; ||
 Show_website__c == &quot;unknown&quot; ||
 Show_website__c  = &quot;.&quot;</errorConditionFormula>
    <errorMessage>Please enter the Organiser web address. Data quality is important</errorMessage>
</ValidationRule>