unpackaged/main/default/objects/EMEA_Salesforce_Form__c/validationRules/Phone_number_should_be_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_should_be_valid</fullName>
    <active>true</active>
    <errorConditionFormula>Phone_Number__c == &quot;.&quot; ||
 Phone_Number__c = &quot;TBC&quot; ||
 Phone_Number__c = &quot;TBD&quot; ||
 Phone_Number__c = &quot;tbc&quot; ||
 Phone_Number__c = &quot;tbd&quot; ||
 Phone_Number__c = &quot;N/A&quot; ||
 Phone_Number__c == &quot;Already Set Up&quot; ||
 Phone_Number__c == &quot;already set up&quot; ||
 Phone_Number__c == &quot;unknown&quot; ||
 Phone_Number__c = &quot;n/a&quot;</errorConditionFormula>
    <errorMessage>Please enter the phone number. Data quality is important</errorMessage>
</ValidationRule>