unpackaged/main/default/objects/EMEA_Salesforce_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account_Owner__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Show_Full_Name__c</columns>
    <columns>Venue__c</columns>
    <columns>Sales_Stage__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Your_location__c</columns>
    <columns>Assigned_to__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>