unpackaged/main/default/objects/EMEA_Salesforce_Form__c/listViews/All_New.listView-meta.xml
<ListView>
    <fullName>All_New</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>All_Service_Show__c</columns>
    <columns>Show_Full_Name__c</columns>
    <columns>Venue__c</columns>
    <columns>Sales_Stage__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Assigned_to__c</columns>
    <columns>Your_location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All New</label>
    <language>en_US</language>
</ListView>