unpackaged/main/default/objects/EMEA_Salesforce_Form__c/listViews/New_Business_Form.listView-meta.xml
<ListView>
    <fullName>New_Business_Form</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Your_location__c</field>
        <operation>equals</operation>
        <value>New Business</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Submitted</value>
    </filters>
    <label>New Business Forms</label>
</ListView>