unpackaged/main/default/objects/EMEA_Salesforce_Form__c/listViews/Requests_this_month.listView-meta.xml
<ListView>
    <fullName>Requests_this_month</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>All_Service_Show__c</columns>
    <columns>Show_Full_Name__c</columns>
    <columns>Venue__c</columns>
    <columns>Sales_Stage__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Assigned_to__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Requests this month</label>
    <language>en_US</language>
</ListView>